# person_follower

./: CMakeLists.txt  package.xml
cfg/: Control.cfg  HandEstimate.cfg  Pose.cfg  PoseEstimate.cfg  Tracking.cfg
launch/: person_follower.launch
models/: get_yolo.py  osnet_x0_5.onnx
person_follower/: CMakeLists.txt  dev.cpp  person_follower.cmake
person_follower/include/person_follower/: person_follower.h
person_follower/include/person_follower/core/: core.h  errors.hpp  model_base.hpp  nms.hpp  utils.hpp
person_follower/include/person_follower/mediapipe/: hand.hpp  mediapipe.h  palm.hpp  palm_anchors.hpp
person_follower/include/person_follower/pose/: base.hpp  pose.h  yolo.hpp
person_follower/include/person_follower/reid/: arcface.hpp  osnet.hpp  yunet.hpp
person_follower/include/person_follower/tracking/: assignment.hpp  sort.hpp  tracking.h
scripts/: control.py  follow_state.py  follow_state2.py  gestures.json  gestures.py  states.json
src/: IntrinsicsSubscriber.hpp  PoseConfigServer.hpp  TrackingConfigServer.hpp  YoloWrapper.hpp  body_pose.cpp  core.cpp  pose.cpp  reid_server.cpp
src/include/: hands.hpp  image.hpp  pose.hpp  types.hpp
src/naive/: SimpleHandsWrapper.hpp  simple_full_pose.cpp
