<?xml version="1.0"?>
<package format="2">
    <name>person_follower</name>
    <version>0.0.0</version>
    <description>Person following nodes for ROS Noetic</description>

    <maintainer email="ferdinand.tonby.strandborg@gmail.com">Ferdinand Tonby-Strandborg</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>person_follower_msgs</depend>

    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>cv_bridge</depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>

    <depend>message_filters</depend>
    <depend>dynamic_reconfigure</depend>

</package>